<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/topAppBar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:title="@string/Hymart"
                    app:titleCentered="true"
                    app:menu="@menu/top_bar"
                    app:navigationIcon="@drawable/ic_baseline_menu_24"
                    style="@style/Widget.MaterialComponents.Toolbar.Primary"
                    />

            </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="270dp"
            android:background="@color/white">

        <HorizontalScrollView
            android:id="@+id/scrollhorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="SpeakableTextPresentCheck">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img1"
                    android:layout_width="1080px"
                    android:layout_height="wrap_content"

                    android:src="@drawable/iklan1" />

                <ImageView
                    android:id="@+id/img2"
                    android:layout_width="1080px"
                    android:layout_height="wrap_content"
                    android:src="@drawable/iklan2" />

            </LinearLayout>
        </HorizontalScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Category"
                android:textSize="20dp"
                android:textAlignment="center"
                android:paddingTop="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="15dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:onClick="makanan">

                        <LinearLayout
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:gravity="center"
                            android:orientation="vertical">
                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:background="@drawable/shop_groceries_icon_158218"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/makanan_minuman"
                                android:textAlignment="center"
                                android:textSize="15dp"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:onClick="rumah">

                        <LinearLayout
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:gravity="center"
                            android:orientation="vertical">
                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:background="@drawable/house_38533"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/rumah_dapur"
                                android:textAlignment="center"
                                android:textSize="15dp"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="15dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:onClick="bayi">

                        <LinearLayout
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:gravity="center"
                            android:orientation="vertical">
                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:background="@drawable/baby"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ibu_anak"
                                android:textAlignment="center"
                                android:textSize="15dp"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:onClick="kesehatan">

                        <LinearLayout
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:gravity="center"
                            android:orientation="vertical">
                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:background="@drawable/kesehatan"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/kesehatan_kecantikan"
                                android:textAlignment="center"
                                android:textSize="15dp"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</com.google.android.material.appbar.AppBarLayout>